--- a/.github/workflows/doit.yml
+++ b/.github/workflows/doit.yml
@@ -7,7 +7,12 @@ jobs:
   doit:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: ls -lahr
-      - run: touch alfalfa
-      - run: ls -lahr
-      - run: pwd
+      - run: docker images
+      - run: docker build -t gha:da --target=artifact --output type=local,dest=$(pwd)/ .
+      - run:  ls -lahr $(pwd)
+      - run: ls -lahr /
+      - run: docker build -t gha:na --target=artifact --output type=local,dest=/ .
+      - run: ls -lahr /
+      - run: docker images
