--- a/.github/workflows/doit.yml
+++ b/.github/workflows/doit.yml
@@ -10,9 +10,10 @@ jobs:
       - uses: actions/checkout@v2
       - run: ls -lahr
       - run: docker images
-      - run: docker build -t gha:da --target=artifact --output type=local,dest=$(pwd)/ .
-      - run:  ls -lahr $(pwd)
-      - run: ls -lahr /
-      - run: docker build -t gha:na --target=artifact --output type=local,dest=/ .
-      - run: ls -lahr /
+      - run: docker build -t gha:da --target=artifact 
       - run: docker images
+      - run: whoami 
+      - run: docker create --name klorel gha:da
+      - run: docker cp klorel:/dist/alfalfa .
+      - run: ls -lahr
+      - run:  ls -lahr $(pwd)
