--- a/.github/workflows/doit.yml
+++ b/.github/workflows/doit.yml
@@ -14,6 +14,6 @@ jobs:
       - run: docker images
       - run: whoami 
       - run: docker create --name klorel gha:da
-      - run: docker cp klorel:/dist/alfalfa .
+      - run: docker cp klorel:/dist .
       - run: ls -lahr
       - run:  ls -lahr $(pwd)
